syntax = "proto3";

option java_multiple_files = true;
option java_package = "ScaleModel.grpc";
option java_outer_classname = "ScaleModelProto";

package grpc;

service Message {
  rpc SendMessage (MessageRequest) returns (MessageReply) {}
}

message MessageRequest {
  int32 logical_time = 1;
}

message MessageReply {
  bool success = 1;
}